--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eid-provider",
-  "version": "0.0.2",
-  "description": "Integration module for Swedish electronic identification providers",
+  "version": "0.0.3",
+  "description": "Integration module for electronic identification providers",
   "bundleDependencies": false,
   "deprecated": false,
   "main": "eid-provider.js",
@@ -9,11 +9,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Sörlöv",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "await-to-js": "^2.1.1",
     "axios": "^0.19.2",
     "jsonwebtoken": "^8.5.1",
+    "request": "^2.88.2",
+    "soap": "^0.31.0",
     "uuid": "^8.1.0"
   },
   "repository": {
